# fappybird

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  _clang-format
include/: fixed_string.hpp  idictionary.hpp  string_utils.hpp  tokenaizer.hpp
src/: main.cpp
test/: CMakeLists.txt  main.cpp
